fix chat scrollbar

--- a/chatapp.client/src/app/components/chat/chat.component.css
+++ b/chatapp.client/src/app/components/chat/chat.component.css
@@ -7,7 +7,6 @@
 
 .messages {
   flex: 1;
-  padding: 10px;
   background-color: #fff;
 }
 
@@ -17,10 +16,12 @@
 }
 
 .sent {
+  margin-right: 10px;
   justify-content: flex-end;
 }
 
 .received {
+  margin-left: 10px;
   justify-content: flex-start;
 }
 
